[package]
name = "terra_track"
version = "1.0.0"
edition = "2021"


[workspace]
members = [".", "migration", "entity", "service", "scanner"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
service = { path = "service" }
scanner = { path = "scanner" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0"
chrono = "0"
thiserror = "1"
[profile.release]
# panic = "abort"
# codegen-units = 1
# lto = true
# opt-level = "s"
# strip = true
