[package]
name = "terra_track"
version = "1.0.0"
edition = "2021"


[workspace]
members = [".", "migration", "entity", "scanner", "api"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
scanner = { path = "scanner" }
api = { path = "api" }

tokio = { version = "1" }

[profile.release]
# panic = "abort"
# codegen-units = 1
# lto = true
# opt-level = "s"
# strip = true
