[package]
name = "rustscan"
version = "1.0.0"
edition = "2021"

[dependencies]
structopt = "0.3.20"
async-std = "1.7.0"
futures = "0.3"
shell-words = "1.0.0"
dirs = "3.0.1"
gcd = "2.0.1"
rand = "0.7.3"
toml = "0.5.7"
serde = "1.0.124"
serde_derive = "1.0.116"
cidr-utils = "0.5.1"
itertools = "0.9.0"
trust-dns-resolver = { version = "0.21.1", features = ["dns-over-rustls"] }
anyhow = "1.0.40"
subprocess = "0.2.6"
text_placeholder = { version = "0.4", features = ["struct_context"] }

