[package]
name = "api"
version = "1.0.0"
edition = "2021"


[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0", features = ["runtime-tokio-rustls"] }

poem = { version = "1" }
async-graphql-poem = { version = "6" }
async-graphql = { version = "6", features = [
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
seaography = { version = "1.0.0-rc.2", features = [
  "with-decimal",
  "with-chrono",
] }
dotenvy = "0"
