[package]
name = "api"
version = "1.0.0"
edition = "2021"


[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "seaography",
] }

poem = { version = "3" }
async-graphql-poem = { version = "7" }
async-graphql = { version = "7", features = [
  "decimal",
  "chrono",
  "dataloader",
  "dynamic-schema",
] }
seaography = { version = "1.0.0-rc.4", features = [
  "with-decimal",
  "with-chrono",
  "with-postgres-array",
] }

anyhow = "1"
dotenvy = "0"
