[package]
name = "scanner"
version = "1.0.0"
edition = "2021"


[workspace]
members = [".", "parser", "service", "../migration", "../entity"]

[dependencies]
parser = { path = "parser" }
service = { path = "service" }
migration = { path = "../migration" }
entity = { path = "../entity" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0"
chrono = "0"
