[package]
name = "scanner"
version = "1.0.0"
edition = "2021"


[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0"
chrono = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
futures = "0"
serde_path_to_error = "0"
quickxml_to_serde = "0"
rand = "0"

[dependencies.sea-orm]
version = "0"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]