[package]
name = "scanner"
version = "1.0.0"
edition = "2021"


[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
tokio = { version = "1" }
futures = "0"

serde = { version = "1" }
serde_json = "1"
serde_path_to_error = "0"
quickxml_to_serde = "0"

regex = "1"
rand = "0"
anyhow = "1"
dotenvy = "0"
chrono = "0"

[dependencies.sea-orm]
version = "0"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]
