[package]
name = "service"
version = "1.0.0"
edition = "2021"


[dependencies]
entity = { path = "../../entity" }
migration = { path = "../../migration" }
parser = { path = "../parser" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0"
anyhow = "1"

[dependencies.sea-orm]
version = "0"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]
